--- a/src/app/ui/forms/sub-form-location/sub-form-location.component.html
+++ b/src/app/ui/forms/sub-form-location/sub-form-location.component.html
@@ -1,20 +1,24 @@
 <form class="sub-form-location" [formGroup]="form.formGroup">
   <fieldset class="sub-form-location__section">
     <mr-sub-form-select
+      #stateRef
       [canDeleteText]="true"
       [isSearchable]="true"
       [label]="'Departamento*'"
       [placeholder]="'Seleccionar...'"
       [options]="states"
+      [isRequired]="true"
       [formControlName]="form.formControlNames.state"
     ></mr-sub-form-select>
 
     <mr-sub-form-select
+      #cityRef
       [canDeleteText]="true"
       [isSearchable]="true"
       [label]="'Ciudad*'"
       [placeholder]="'Seleccionar...'"
       [options]="cities"
+      [isRequired]="true"
       [formControlName]="form.formControlNames.city"
     ></mr-sub-form-select>
   </fieldset>
