--- a/src/app/ui/forms/sub-form-textarea/sub-form-textarea.component.html
+++ b/src/app/ui/forms/sub-form-textarea/sub-form-textarea.component.html
@@ -6,8 +6,9 @@
     <div class="sub-form-textarea__text">
       <mr-text
         [type]="'line'"
-        [size]="'base'"
         [text]="text"
+        [size]="'small'"
+        [weight]="'bold'"
       ></mr-text>
       <textarea
         class="sub-form-textarea__textarea"
@@ -23,3 +24,5 @@
     </div>
   </label>
 </div>
+
+<mr-form-errors *ngIf="isTouched" [errors]="errors"></mr-form-errors>
