Disclousures were updated

--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -179,7 +179,7 @@
     <span class="form-user__disclosure">
       <mr-sub-form-select 
         #disclosureRef
-        [label]="'¿Por dónde conociste Mujeres Rofé?*'"
+        [label]="'¿Por dónde conociste Mujeres ROFÉ?*'"
         [options]="disclosures"
         [isRequired]="true"
         [formControlName]="form.formControlNames.disclosure"
